--- a/Dashboard.css
+++ b/Dashboard.css
@@ -20,30 +20,40 @@
     animation: coinUpdate 1s ease-in-out;
 }
 
+
+
+
+
+
 .rank-number {
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: auto;
     font-size: 30px;
     font-weight: bold;
+    position: absolute;
+    margin-left: 43%;
+    margin-top: 37%;
 }
 
-#coinBank,
-#username {
+#coinBank,#username{
     color: rgb(248, 0, 202);
     font-weight: bold;
-    transition: all 0.3s ease-in-out;
 }
 
-#coinBank:hover,
-#username:hover {
+#coinBank:hover,#username:hover{
     color: rgb(12, 0, 245);
     font-weight: bold;
-    transform: scale(1.1);
+    transform: scale(135%);
+    transition: all 300ms ease-in-out;
+
 }
 
-.link-img:hover {
-    transform: scale(1.1);
+
+.link-img:hover{
+    transform: scale(115%);
+    transition: all 300ms ease-in-out;
 }
 
 #nav-bar {
@@ -56,9 +66,12 @@
     align-items: center;
     background-color: #89c1a0;
     color: white;
+
 }
 
 .welcome-msg {
+    margin: 2px;
+    padding: 10px;
     font-size: 25px;
 }
 
@@ -72,10 +85,15 @@
     font-size: 17px;
 }
 
-.user-profile:hover,
-.user-signOut:hover {
-    transform: scale(1.1);
+.user-profile:hover {
+    transform: scale(115%);
     color: red;
+}
+
+.user-signOut:hover {
+    transform: scale(115%);
+    color: red;
+    font-weight: bold;
 }
 
 .nav-items a {
@@ -87,32 +105,41 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
+
 }
 
 .coin-info {
     font-size: 17px;
     padding: 1px;
+    margin: 2px;
 }
 
 .main {
     width: 100%;
-    height: calc(100vh - 80px);
+    height: calc(100%-80px);
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 20px;
-    padding: 20px;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 40px;
+    column-gap: 100px;
+
 }
 
 .link-box {
+    margin: 10px;
     border-radius: 5px;
     background-color: rgb(158, 140, 120);
     border: 2px solid transparent;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.link-img {
+    /* background-color: black; */
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 20px;
-    cursor: pointer;
 }
 
 .link-img img {
@@ -120,10 +147,17 @@
     width: 120px;
     border-radius: 50%;
     margin: 10px;
-    transition: all 0.3s ease-in-out;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 1500px) {
+    #nav-bar {
+        height: 60px;
+    }
+
+    .welcome-msg {
+        font-size: 20px;
+    }
+
     .nav-items {
         width: 50vw;
         font-size: 15px;
@@ -138,58 +172,130 @@
         font-size: 15px;
     }
 
-    .welcome-msg {
-        font-size: 20px;
-    }
-
     .main {
-        gap: 30px;
+        gap: 50px;
+        grid-template-columns: 1fr 1fr 1fr;
     }
 
     .link-box {
-        height: auto;
+        height: 350px;
     }
 
     .link-img img {
         height: 80px;
         width: 80px;
+        margin: 5px;
     }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1000px) {
     #nav-bar {
         height: 60px;
     }
 
+    .welcome-msg {
+        font-size: 20px;
+    }
+
     .nav-items {
-        font-size: 13px;
+        font-size: 15px;
     }
 
     .user-profile {
-        height: 25px;
-        width: 25px;
+        height: 30px;
+        width: 30px;
     }
 
     .coin-info {
-        font-size: 13px;
-    }
-
-    .welcome-msg {
         font-size: 15px;
     }
 
     .main {
-        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-        gap: 15px;
-        padding: 10px;
+        column-gap: 50px;
+        grid-template-columns: 1fr 1fr;
     }
 
     .link-box {
-        padding: 10px;
+        height: 250px;
     }
 
     .link-img img {
-        height: 70px;
-        width: 70px;
+        height: 115px;
+        width: 115px;
+        border-radius: 50%;
+        margin: 10px;
+    }
+
+    .link-img img {
+        height: 120px;
+        width: 120px;
+        margin: 5px;
     }
 }
+
+@media (max-width: 600px) {
+    .welcome-msg {
+        font-size: 17px;
+    }
+
+    .nav-items {
+        font-size: 11px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 11px;
+        width: 25vw;
+    }
+
+}
+
+@media (max-width: 500px) {
+    #nav-bar {
+        height: 50px;
+    }
+
+    .welcome-msg {
+        font-size: 17px;
+    }
+
+    .nav-items {
+        font-size: 15px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 14px;
+    }
+
+    .main {
+        gap: 10px;
+        grid-template-columns: 1fr;
+    }
+
+    .link-box {
+        height: 400px;
+    }
+
+    .link-img img {
+        height: 135px;
+        width: 135px;
+        border-radius: 50%;
+        margin: 10px;
+    }
+
+    .link-img img {
+        height: 150px;
+        width: 150px;
+        margin: 5px;
+    }
+}
+
