--- a/Dashboard.css
+++ b/Dashboard.css
@@ -2,7 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: sans-serif;
+    font-family: 'Arial', sans-serif;
+}
+
+@keyframes fadeInUp {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
 }
 
 @keyframes coinUpdate {
@@ -20,80 +31,64 @@
     animation: coinUpdate 1s ease-in-out;
 }
 
-
-
-
-
-
 .rank-number {
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: auto;
     font-size: 30px;
     font-weight: bold;
-    position: absolute;
-    margin-left: 43%;
-    margin-top: 37%;
 }
 
-#coinBank,#username{
+#coinBank,
+#username {
     color: rgb(248, 0, 202);
     font-weight: bold;
+    transition: all 0.3s ease-in-out;
 }
 
-#coinBank:hover,#username:hover{
+#coinBank:hover,
+#username:hover {
     color: rgb(12, 0, 245);
     font-weight: bold;
-    transform: scale(135%);
-    transition: all 300ms ease-in-out;
-
+    transform: scale(1.1);
 }
 
-
-.link-img:hover{
-    transform: scale(115%);
-    transition: all 300ms ease-in-out;
+.link-img:hover {
+    transform: scale(1.1);
 }
 
 #nav-bar {
     width: 100%;
-    min-width: 400px;
-    height: 80px;
-    border: 2px solid black;
+    height: 60px;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    background-color: #89c1a0;
+    background-color: #3F51B5;
     color: white;
-
+    padding: 0 20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    animation: fadeInUp 1s ease;
 }
 
 .welcome-msg {
-    margin: 2px;
-    padding: 10px;
-    font-size: 25px;
+    font-size: 20px;
 }
 
 .nav-items {
-    height: 70px;
-    width: 35vw;
     display: flex;
-    justify-content: center;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
     font-size: 17px;
 }
 
-.user-profile:hover {
-    transform: scale(115%);
-    color: red;
+.user-profile,
+.user-signOut {
+    transition: all 0.3s ease-in-out;
 }
 
+.user-profile:hover,
 .user-signOut:hover {
-    transform: scale(115%);
-    color: red;
-    font-weight: bold;
+    transform: scale(1.1);
 }
 
 .nav-items a {
@@ -105,41 +100,37 @@
     height: 40px;
     width: 40px;
     border-radius: 50%;
-
 }
 
 .coin-info {
     font-size: 17px;
     padding: 1px;
-    margin: 2px;
 }
 
 .main {
     width: 100%;
-    height: calc(100%-80px);
+    min-height: calc(100vh - 60px);
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-    row-gap: 40px;
-    column-gap: 100px;
-
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
+    padding: 20px;
 }
 
 .link-box {
-    margin: 10px;
     border-radius: 5px;
     background-color: rgb(158, 140, 120);
     border: 2px solid transparent;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-}
-
-.link-img {
-    /* background-color: black; */
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 20px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+}
+
+.link-box.clicked {
+    pointer-events: none;
 }
 
 .link-img img {
@@ -147,19 +138,15 @@
     width: 120px;
     border-radius: 50%;
     margin: 10px;
+    transition: all 0.3s ease-in-out;
 }
 
-@media (max-width: 1500px) {
-    #nav-bar {
-        height: 60px;
-    }
+.link-box.clicked .link-img img {
+    filter: blur(3px);
+}
 
-    .welcome-msg {
-        font-size: 20px;
-    }
-
+@media (max-width: 768px) {
     .nav-items {
-        width: 50vw;
         font-size: 15px;
     }
 
@@ -172,130 +159,61 @@
         font-size: 15px;
     }
 
+    .welcome-msg {
+        font-size: 20px;
+    }
+
     .main {
-        gap: 50px;
-        grid-template-columns: 1fr 1fr 1fr;
+        gap: 30px;
     }
 
     .link-box {
-        height: 350px;
+        height: auto;
     }
 
     .link-img img {
         height: 80px;
         width: 80px;
-        margin: 5px;
     }
-}
-
-@media (max-width: 1000px) {
-    #nav-bar {
-        height: 60px;
-    }
-
-    .welcome-msg {
-        font-size: 20px;
-    }
-
-    .nav-items {
-        font-size: 15px;
-    }
-
-    .user-profile {
-        height: 30px;
-        width: 30px;
-    }
-
-    .coin-info {
-        font-size: 15px;
-    }
-
-    .main {
-        column-gap: 50px;
-        grid-template-columns: 1fr 1fr;
-    }
-
-    .link-box {
-        height: 250px;
-    }
-
-    .link-img img {
-        height: 115px;
-        width: 115px;
-        border-radius: 50%;
-        margin: 10px;
-    }
-
-    .link-img img {
-        height: 120px;
-        width: 120px;
-        margin: 5px;
-    }
-}
-
-@media (max-width: 600px) {
-    .welcome-msg {
-        font-size: 17px;
-    }
-
-    .nav-items {
-        font-size: 11px;
-    }
-
-    .user-profile {
-        height: 30px;
-        width: 30px;
-    }
-
-    .coin-info {
-        font-size: 11px;
-        width: 25vw;
-    }
-
 }
 
 @media (max-width: 500px) {
     #nav-bar {
         height: 50px;
-    }
-
-    .welcome-msg {
-        font-size: 17px;
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 10px;
     }
 
     .nav-items {
-        font-size: 15px;
+        font-size: 13px;
     }
 
     .user-profile {
-        height: 30px;
-        width: 30px;
+        height: 25px;
+        width: 25px;
     }
 
     .coin-info {
-        font-size: 14px;
+        font-size: 13px;
+    }
+
+    .welcome-msg {
+        font-size: 15px;
     }
 
     .main {
-        gap: 10px;
-        grid-template-columns: 1fr;
+        grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+        gap: 15px;
+        padding: 10px;
     }
 
     .link-box {
-        height: 400px;
+        padding: 10px;
     }
 
     .link-img img {
-        height: 135px;
-        width: 135px;
-        border-radius: 50%;
-        margin: 10px;
-    }
-
-    .link-img img {
-        height: 150px;
-        width: 150px;
-        margin: 5px;
+        height: 70px;
+        width: 70px;
     }
 }
-
