--- a/Dashboard.css
+++ b/Dashboard.css
@@ -1,12 +1,10 @@
-/* Reset styles */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Arial, sans-serif;
+    font-family: sans-serif;
 }
 
-/* Keyframe animation for updating coins */
 @keyframes coinUpdate {
     from {
         color: gold;
@@ -18,85 +16,283 @@
     }
 }
 
-/* Apply animation to elements with the class coin-animate */
 .coin-animate {
     animation: coinUpdate 1s ease-in-out;
 }
 
-/* Navigation bar styles */
+
+
+.rank-number {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: auto;
+    font-size: 30px;
+    font-weight: bold;
+    position: absolute;
+    margin-left: 43%;
+    margin-top: 37%;
+}
+
+#coinBank,#username{
+    color: rgb(248, 0, 202);
+    font-weight: bold;
+}
+
+#coinBank:hover,#username:hover{
+    color: rgb(12, 0, 245);
+    font-weight: bold;
+    transform: scale(135%);
+    transition: all 300ms ease-in-out;
+
+}
+
+
+.link-img:hover{
+    transform: scale(115%);
+    transition: all 300ms ease-in-out;
+}
+
 #nav-bar {
     width: 100%;
-    height: 60px;
+    min-width: 400px;
+    height: 80px;
+    border: 2px solid black;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
-    background-color: #3F51B5;
+    background-color: #89c1a0;
     color: white;
-    padding: 0 20px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+
 }
 
 .welcome-msg {
-    font-size: 20px;
+    margin: 2px;
+    padding: 10px;
+    font-size: 25px;
 }
 
 .nav-items {
+    height: 70px;
+    width: 35vw;
     display: flex;
+    justify-content: center;
     align-items: center;
-}
-
-.user-profile,
-.user-signOut {
-    margin-left: 20px;
-    height: 40px;
-    width: 40px;
-    border-radius: 50%;
-    transition: all 0.3s ease-in-out;
-}
-
-.user-profile:hover,
-.user-signOut:hover {
-    transform: scale(1.1);
-}
-
-/* Coin info styles */
-.coin-info {
+    gap: 15px;
     font-size: 17px;
 }
 
-/* Main section styles */
-.main {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    gap: 20px;
-    padding: 20px;
+.user-profile:hover {
+    transform: scale(115%);
+    color: red;
 }
 
-/* Link box styles */
+.user-signOut:hover {
+    transform: scale(115%);
+    color: red;
+    font-weight: bold;
+}
+
+.nav-items a {
+    text-decoration: none;
+    color: white;
+}
+
+.user-profile {
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+
+}
+
+.coin-info {
+    font-size: 17px;
+    padding: 1px;
+    margin: 2px;
+}
+
+.main {
+    width: 100%;
+    height: calc(100%-80px);
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    row-gap: 40px;
+    column-gap: 100px;
+
+}
+
 .link-box {
-    background-color: #ECEFF1;
-    border-radius: 10px;
-    padding: 20px;
+    margin: 10px;
+    border-radius: 5px;
+    background-color: rgb(158, 140, 120);
+    border: 2px solid transparent;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+}
+
+.link-img {
+    /* background-color: black; */
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-    cursor: pointer;
-    transition: all 0.3s ease-in-out;
-}
-
-.link-box:hover {
-    transform: scale(1.05);
 }
 
 .link-img img {
-    width: 100%;
-    border-radius: 10px;
-    margin-bottom: 10px;
-    transition: all 0.3s ease-in-out;
+    height: 120px;
+    width: 120px;
+    border-radius: 50%;
+    margin: 10px;
 }
 
-.link-box.clicked {
-    pointer-events: none;
-    filter: blur(3px);
+@media (max-width: 1500px) {
+    #nav-bar {
+        height: 60px;
+    }
+
+    .welcome-msg {
+        font-size: 20px;
+    }
+
+    .nav-items {
+        width: 50vw;
+        font-size: 15px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 15px;
+    }
+
+    .main {
+        gap: 50px;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+
+    .link-box {
+        height: 350px;
+    }
+
+    .link-img img {
+        height: 80px;
+        width: 80px;
+        margin: 5px;
+    }
 }
+
+@media (max-width: 1000px) {
+    #nav-bar {
+        height: 60px;
+    }
+
+    .welcome-msg {
+        font-size: 20px;
+    }
+
+    .nav-items {
+        font-size: 15px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 15px;
+    }
+
+    .main {
+        column-gap: 50px;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .link-box {
+        height: 250px;
+    }
+
+    .link-img img {
+        height: 115px;
+        width: 115px;
+        border-radius: 50%;
+        margin: 10px;
+    }
+
+    .link-img img {
+        height: 120px;
+        width: 120px;
+        margin: 5px;
+    }
+}
+
+@media (max-width: 600px) {
+    .welcome-msg {
+        font-size: 17px;
+    }
+
+    .nav-items {
+        font-size: 11px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 11px;
+        width: 25vw;
+    }
+
+}
+
+@media (max-width: 500px) {
+    #nav-bar {
+        height: 50px;
+    }
+
+    .welcome-msg {
+        font-size: 17px;
+    }
+
+    .nav-items {
+        font-size: 15px;
+    }
+
+    .user-profile {
+        height: 30px;
+        width: 30px;
+    }
+
+    .coin-info {
+        font-size: 14px;
+    }
+
+    .main {
+        gap: 10px;
+        grid-template-columns: 1fr;
+    }
+
+    .link-box {
+        height: 400px;
+    }
+
+    .link-img img {
+        height: 135px;
+        width: 135px;
+        border-radius: 50%;
+        margin: 10px;
+    }
+
+    .link-img img {
+        height: 150px;
+        width: 150px;
+        margin: 5px;
+    }
+}
+
