--- a/profile.css
+++ b/profile.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 70px;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #4CAF50;
     color: white;
