--- a/profile.css
+++ b/profile.css
@@ -278,6 +278,18 @@
             margin-bottom: 5px;
         }
 
+
+        #nav-bar {
+            
+            display: flex;
+            justify-content: space-evenly;
+            align-items: center;
+            background-color: #4CAF50;
+            color: white;
+            padding: 0 20px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
         .user-profile-photo {
             height: 60px;
             width: 60px;
