--- a/profile.css
+++ b/profile.css
@@ -282,7 +282,7 @@
         #nav-bar {
             
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-evenly;
             align-items: center;
             background-color: #4CAF50;
