--- a/profile.css
+++ b/profile.css
@@ -5,6 +5,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+#usernames{
+    font-weight: bolder;
+    color: rgb(16, 0, 53);
+}
+
 /* Navbar styling */
 #nav-bar {
     width: 100%;
