--- a/profile.css
+++ b/profile.css
@@ -282,9 +282,8 @@
         #nav-bar {
             
             display: flex;
-            flex-direction: column;
+            flex-direction: row;
             justify-content: space-evenly;
-            
             
         }
 
