--- a/profile.css
+++ b/profile.css
@@ -112,10 +112,6 @@
     gap: 15px;
 }
 
-.same{
-    color:black;
-}
-
 .service-item {
     width: 100px;
     text-align: center;
@@ -238,6 +234,11 @@
         padding: 10px;
     }
 
+    #username{
+        font-size: 2px;
+        
+    }
+
     .service-item {
         width: 120px;
         padding: 15px;
@@ -286,7 +287,7 @@
         #nav-bar {
             
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             justify-content: space-evenly;
             
         }
