--- a/profile.css
+++ b/profile.css
@@ -235,8 +235,8 @@
     }
 
     #username{
-        font-size: 8px;
-        
+        font-size: 2px;
+        display: none;
     }
 
     .service-item {
