--- a/Dashboard.css
+++ b/Dashboard.css
@@ -7,29 +7,30 @@
 }
 
 #profilePic {
-  width: 50px; /* Adjust as needed */
-  height: 40px; /* Adjust as needed */
-  animation: popRotate 2s infinite;
-  transform-origin: center;
-}
-
-@keyframes popRotate {
-  0% {
-    transform: scale(1) rotate(0deg);
+    width: 50px; /* Adjust as needed */
+    height: 40px; /* Adjust as needed */
+    transform-origin: top center; /* Set the pivot point at the top center */
+    animation: swing 2s ease-in-out infinite;
   }
-  25% {
-    transform: scale(1.2) rotate(45deg);
+  
+  @keyframes swing {
+    0% {
+      transform: rotate(0deg);
+    }
+    25% {
+      transform: rotate(15deg);
+    }
+    50% {
+      transform: rotate(0deg);
+    }
+    75% {
+      transform: rotate(-15deg);
+    }
+    100% {
+      transform: rotate(0deg);
+    }
   }
-  50% {
-    transform: scale(1) rotate(90deg);
-  }
-  75% {
-    transform: scale(1.2) rotate(135deg);
-  }
-  100% {
-    transform: scale(1) rotate(180deg);
-  }
-}
+  
 
 
 #username,#coinBank{
