--- a/resister.css
+++ b/resister.css
@@ -4,6 +4,11 @@ body {
     background-image: url("https://img.freepik.com/free-photo/flat-lay-top-view-office-table-desk-workspace-background_1150-6681.jpg");
 }
 
+#message {
+    color: red;
+    font-weight: bold;
+}
+
 .container {
     width: 350px;
     /* Increased width for better spacing */
@@ -24,7 +29,8 @@ body {
 
 /* Loading spinner styling */
 .spinner {
-    display: none; /* Initially hidden */
+    display: none;
+    /* Initially hidden */
     position: fixed;
     top: 50%;
     left: 50%;
@@ -55,10 +61,12 @@ body {
         stroke-dasharray: 1, 150;
         stroke-dashoffset: 0;
     }
+
     50% {
         stroke-dasharray: 90, 150;
         stroke-dashoffset: -35;
     }
+
     100% {
         stroke-dasharray: 90, 150;
         stroke-dashoffset: -124;
@@ -67,7 +75,8 @@ body {
 
 /* Blur overlay styling */
 .blur-overlay {
-    display: none; /* Initially hidden */
+    display: none;
+    /* Initially hidden */
     position: fixed;
     top: 0;
     left: 0;
