--- a/referral.css
+++ b/referral.css
@@ -56,6 +56,7 @@ p {
     border: 2px solid #ccc;
     border-radius: 5px;
     text-align: center;
+    transition: background-color 0.3s ease-in-out;
 }
 
 #copyButton {
